@@ -1,4 +1,4 @@
-$Id: History,v 1.10 2001-03-08 14:57:42 maire Exp $
+$Id: History,v 1.11 2001-03-27 08:34:07 maire Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -15,6 +15,9 @@ track of all tags.
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
      
+27-03-01  mma (testem1-V03-00-05)
+	  - set cppflag G4NOHIST = true in gnumakefile
+	  	       
 08-03-01  Hisaya (testem1-V03-00-04)
           - adapted ProcessesCount to STL
 	       
